<resources>
    <string name="app_name">FloatWindow</string>
    <string name="version">ver:</string>

    <string name="web_browser">Web Browser</string>
    <string name="note">Note</string>
    <string name="temperature_conversion">Temperature Cnversion</string>
    <string name="BMI_conversion">BMI Cnversion</string>
    <string name="setting">Setting</string>
    <string name="windows_list">Windows list</string>
    <string name="runing">Running</string>
    <string name="open_page_of">Open page of?</string>
    <string name="web_say">Web say</string>
    <string name="confirm">confirm</string>
    <string name="cancel">cancel</string>
    <string name="open_link">Open link</string>
    <string name="open_link_in_new_window">Open link in new window</string>
    <string name="copy_link">Copy link</string>
    <string name="copyed">copyed</string>
    <string name="share_the_website">Share</string>
    <string name="open_to_other_browser">Open to other browser</string>
    <string name="select_APP">select APP</string>
    <string name="select_browser">select browser</string>
    <string name="temperature">temperature</string>
    <string name="conversion_to_fah">to °F</string>
    <string name="conversion_to_celsius">to°C</string>
    <string name="height">height</string>
    <string name="cm">cm</string>
    <string name="weight">weight</string>
    <string name="kg">kg</string>
    <string name="conversion">conversion</string>

    <string name="window_animation_speed_sec">window animation speed(sec):</string>
    <string name="float_window_setting">FloatWindow Setting</string>
    <string name="window_color">Window color:</string>
    <string name="window_out_of_focus_color">Window out of focus color:</string>
    <string name="select_window_color">select window color</string>
    <string name="window_title">window title</string>
    <string name="select_window_out_of_focus_color">Select window out of focus color</string>
    <string name="select_color">select color</string>
    <string name="about">About</string>
    <string name="web_url">Web url</string>
    <string name="other_notes">Other notes</string>
    <string name="create_new_note">Create new note</string>
    <string name="share">Share</string>
    <string name="hide_frame">Hide frame</string>
    <string name="bookmarks">Bokmarks</string>
    <string name="history">History</string>
    <string name="delete">Delete</string>
    <string name="add_to_bookmarks">add to bookmark</string>
    <string name="title">title</string>
    <string name="add">add</string>
    <string name="edit">Edit</string>
    <string name="no_data">No data</string>
    <string name="bookmark_added">Bookmark added</string>
    <string name="edit_bookmark">Edit bookmark</string>
    <string name="home_page">Home page</string>
    <string name="enable_javascript">Enable JavaScript</string>
    <string name="enable_zoom">Enable zoom</string>
    <string name="display_zoom_button">Display zoom button</string>
    <string name="web_browser_setting">Web browser setting</string>
    <string name="AD_ID">ca-app-pub-4604853118314154~2222092369</string>
    <string name="brickout">brickout</string>
    <string name="play">paly</string>
    <string name="score">score:</string>
    <string name="life">life:</string>
    <string name="total_score">total score:</string>
    <string name="game_over">game over</string>
    <string name="brick">brick</string>
    <string name="enable_ads_block">Enable ads block (Beta)</string>
    <string name="calculator">Calculator</string>
    <string name="shortcut_desabled">Shortcut desabled</string>
    <string name="add_to_home_screen">add to home screen</string>
    <string name="tip_Long_press_add_home_screen">Tip: Long press can add to home screen</string>
    <string name="added_to_the_home_screen">added to the home screen</string>
    <string name="new_functions">what is new?</string>
    <string name="help">Help</string>
    <string name="help_string1">Basic operation</string>
    <string name="help_string3">A shortcut to the tool can be created on the main screen.</string>
    <string name="window_buttons_height">Winodw button height</string>
    <string name="window_buttons_width">Window button width</string>
    <string name="window_size_bar_height">Window size bar height</string>
    <string name="close_notification_message">There are still unclosed windows!\nIf you close FloatWindow,\nthe next time you open it,\nthe windows will automatically resume.\n</string>
    <string name="close_notification">Close Notification</string>
    <string name="auto_execute_in_boot_after">auto execute in boot after</string>
    <string name="resident_at_the_notification_center">resident at the notification center</string>
    <string name="help_string2">From the notification center, you can quickly open any function of the FloatWindow.</string>
    <string name="watch_ad">Be careful! This is advertisement</string>
    <string name="watched_ad">Thank you for your interest in advertisement! Thank you!</string>
    <string name="download_method">Download method</string>
    <string name="call_other_browsers_download">This will call other browsers to download</string>
    <string name="are_you_sure_download">Are you sure to download?</string>
    <string name="type">Type</string>
    <string name="size">Size</string>
    <string name="delete_msg">are you sure delete?</string>
    <string name="delete_note">delete note</string>
    <string name="desktop_mode">desktop mode</string>
    <string name="shortcut_title">shortcut title:</string>
    <string name="hidden_controls_bar">hidden address bar</string>
    <string name="default_browser_mode">default browser mode</string>
    <string name="do_close">Do close</string>
    <string name="view_open_windows">View opened windows</string>
    <string name="notes">notes</string>
    <string name="donate">Like it? Welcome to donate us</string>
    <string name="remember_current_window_state">remember the current window state</string>
    <string name="button_width_for_mini_state">button width for mini state</string>
    <string name="button_height_for_mini_state">button height for mini state</string>
    <string name="window_mini_state_color">window mini state color:</string>
    <string name="what_is_new_title1">Do you like FloatWindow?</string>
    <string name="what_is_new_string1">In this update we have caught some bugs and four new features, and if you want to sponsor us, we have added a sponsor link in the main menu, welcome to sponsor us.</string>
    <string name="what_is_new_title2">Shortcuts for remembering states</string>
    <string name="what_is_new_string2">Starting from this version, when creating a shortcut to the home screen, you can choose whether to open it with the current window position, size, mode, and style of the hidden address bar.</string>
    <string name="what_is_new_title3">Customize minimized size</string>
    <string name="what_is_new_string3">Starting with this version, you can customize the size of the window when it is minimized in the settings.</string>
    <string name="what_is_new_title4">Independent js switch for web browser</string>
    <string name="what_is_new_string4">Starting with this version, javascript can be individually disabled or enabled for each browser window from the menu.</string>
    <string name="what_is_new_title5">Web Browser Permission Management</string>
    <string name="what_is_new_string5">Starting from this version, the website you are browsing can request some permissions from you (eg camera). If you want to withdraw the permission after granting the permission, you can find "Website Permission Settings" in the menu of the browser window to change it.</string>


    <string-array name="browser_mode">
        <item>default mode</item>
        <item>desktop mode</item>
    </string-array>
    <string-array name="enable_javascript_select">
        <item>default</item>
        <item>disable</item>
        <item>enable</item>
    </string-array>
    <string-array name="permissions">
        <item>refuse</item>
        <item>default</item>
        <item>allow</item>
    </string-array>
    <string name="camera">Camera</string>
    <string name="microphone">Microphone</string>
    <string name="MIDI_Sysex">MIDI device</string>
    <string name="protected_media">protected content ID</string>
    <string name="permission_request">Permission request</string>
    <string name="permission">permission</string>
    <string name="request">request</string>
    <string name="website">Website</string>
    <string name="location">Location</string>
    <string name="website_permission_setting">website permission setting</string>
    <string name="allow">allow</string>
    <string name="refuse">refuse</string>
    <string name="leak_canary_test_class_name" translatable="false">assertk.Assert</string>
</resources>
