<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.example.jack8.floatwindow.FwEditView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:shadowColor="#cefffefe"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="15"
        android:textColor="#313131"
        android:ems="10"
        android:hint="@string/title"
        android:inputType="textPersonName" />

    <com.example.jack8.floatwindow.FwEditView
        android:id="@+id/home_link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:shadowColor="#cefffefe"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="15"
        android:textColor="#313131"
        android:ems="10"
        android:hint="http://"
        android:inputType="textPersonName" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/confirm" />

        <Button
            android:id="@+id/remove"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/delete" />
    </LinearLayout>
</LinearLayout>